<resources>
    <string name="app_name">MyCorrectionApplication</string>

    <string name="btn_amazon">Amazon</string>
    <string name="btn_google">Google</string>
    <string name="btn_submit">Send</string>
    <string name="btn_url">Load</string>

    <string name="input_first_name">First Name</string>
    <string name="input_last_name">Last Name</string>
    <string name="input_url">URL (eg. https://google.com)</string>

    <string-array name="spinner_protocol">
        <item>http://</item>
        <item>https://</item>
    </string-array>
</resources>
